Removed 'images/' from all img tags.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 			<header class="main-header">
 				<div class="nav-bar">
-					<div class="logo"><a href="#"><img src="images/logo.png" alt="logo"/></a></div>
+					<div class="logo"><a href="#"><img src="logo.png" alt="logo"/></a></div>
 					<ul class="main-nav">
 						<li><a href="#">About Us</a></li>
 						<li><a href="#">Reserve A Pet</a></li>
@@ -31,9 +31,9 @@
 				<h2 class="headline">Select the type of pet that needs sitting:</h2>
 				<p class="headline">Get the care you need for your pet.</p>
 				<div class="petField">
-					<a href="#" class="col"><img src="images/cat.png" alt="Cat"/></a>
-					<a href="#" class="col"><img src="images/corgi.png" alt="Dog"/></a>
-					<a href="#" class="col"><img src="images/bunny.png" alt="Other"/></a>
+					<a href="#" class="col"><img src="cat.png" alt="Cat"/></a>
+					<a href="#" class="col"><img src="corgi.png" alt="Dog"/></a>
+					<a href="#" class="col"><img src="bunny.png" alt="Other"/></a>
 				</div>
 			</div>
 
