--- a/reservation-booked.html
+++ b/reservation-booked.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Doggy Daycare</title>
+	<title>Doggy Daycare / Reservation Booked</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="normalize.css" />
@@ -28,12 +28,9 @@
 			</header>  
 			
 			<div class="row">
-				<h2 class="headline">Select the type of pet that needs sitting:</h2>
-				<div class="petField">
-					<a href="reserve-a-pet.html" class="col"><img src="images/cat.png" alt="Cat"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="images/corgi.png" alt="Dog"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="images/bunny.png" alt="Other"/></a>
-				</div>
+				<h2 class="headline">Thanks for Booking with Us!</h2>
+				<p class="headline">Your reservation for 'pet name' is booked for 'this date' - 'that date'. Make sure to print this page for your records. </p>
+				
 			</div>
 
 		</div>
