--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 			<header class="main-header">
 				<div class="nav-bar">
-					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"/></a></div>
+					<div class="logo"><a href="index.html"><img src="logo.png" alt="logo"/></a></div>
 					<ul class="main-nav">
 						<li><a href="#">About Us</a></li>
 						<li><a href="reserve-a-pet.html">Reserve A Pet</a></li>
@@ -30,9 +30,9 @@
 			<div class="row">
 				<h2 class="headline">Select the type of pet that needs sitting:</h2>
 				<div class="petField">
-					<a href="reserve-a-pet.html" class="col"><img src="images/cat.png" alt="Cat"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="images/corgi.png" alt="Dog"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="images/bunny.png" alt="Other"/></a>
+					<a href="reserve-a-pet.html" class="col"><img src="cat.png" alt="Cat"/></a>
+					<a href="reserve-a-pet.html" class="col"><img src="corgi.png" alt="Dog"/></a>
+					<a href="reserve-a-pet.html" class="col"><img src="bunny.png" alt="Other"/></a>
 				</div>
 			</div>
 
