--- a/message-sent.html
+++ b/message-sent.html
@@ -18,7 +18,7 @@
 
 			<header class="main-header">
 				<div class="nav-bar">
-					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"/></a></div>
+					<div class="logo"><a href="index.html"><img src="logo.png" alt="logo"/></a></div>
 					<ul class="main-nav">
 						<li><a href="#">About Us</a></li>
 						<li><a href="reserve-a-pet.html">Reserve A Pet</a></li>
