Updated Company Name in Footer

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 	var today = new Date();
 	var year = today.getFullYear();
 	var copyright = document.getElementById('copyright');
-	copyright.innerHTML = '&copy; ' + year + ' Travel Worthy';
+	copyright.innerHTML = '&copy; ' + year + ' Pet Spa &amp; Care';
 	</script>
 
 </body>
