--- a/contact.html
+++ b/contact.html
@@ -80,7 +80,7 @@
 	var today = new Date();
 	var year = today.getFullYear();
 	var copyright = document.getElementById('copyright');
-	copyright.innerHTML = '&copy; ' + year + ' Travel Worthy';
+	copyright.innerHTML = '&copy; ' + year + ' Pet Spa &amp; Care';
 	</script>
 
 </body>
