--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styles.css" />
 	<link rel="stylesheet" type="text/css" href="flexbox.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
+
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	
 </head>
@@ -18,7 +19,7 @@
 
 			<header class="main-header">
 				<div class="nav-bar">
-					<div class="logo"><a href="index.html"><img src="logo.png" alt="logo"/></a></div>
+					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"/></a></div>
 					<ul class="main-nav">
 						<li><a href="#">About Us</a></li>
 						<li><a href="reserve-a-pet.html">Reserve A Pet</a></li>
@@ -30,9 +31,9 @@
 			<div class="row">
 				<h2 class="headline">Select the type of pet that needs sitting:</h2>
 				<div class="petField">
-					<a href="reserve-a-pet.html" class="col"><img src="cat.png" alt="Cat"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="corgi.png" alt="Dog"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="bunny.png" alt="Other"/></a>
+					<a href="reserve-a-pet.html" class="col"><img src="images/cat.png" alt="Cat"/></a>
+					<a href="reserve-a-pet.html" class="col"><img src="images/corgi.png" alt="Dog"/></a>
+					<a href="reserve-a-pet.html" class="col"><img src="images/bunny.png" alt="Other"/></a>
 				</div>
 			</div>
 
@@ -44,12 +45,6 @@
 
     </div>
 		
-	<script language="javascript" type="text/javascript">
-		function loadForm(this) {
-			this.
-		}
-    </script>
-
 	<script language="javascript" type="text/javascript">
 	// Gets the discount countdown date
 	var today = new Date();
