--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
 
 			<header class="main-header">
 				<div class="nav-bar">
-					<div class="logo"><a href="index.html"><img src="logo.png" alt="logo"/></a></div>
+					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"/></a></div>
 					<ul class="main-nav">
 						<li><a href="#">About Us</a></li>
 						<li><a href="reserve-a-pet.html">Reserve A Pet</a></li>
@@ -68,12 +68,6 @@
     	</footer>
 
     </div>
-		
-	<script language="javascript" type="text/javascript">
-		function loadForm(this) {
-			this.
-		}
-    </script>
 
 	<script language="javascript" type="text/javascript">
 	// Gets the discount countdown date
