--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
 	<title>Doggy Daycare</title>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="normalize.css" />
-	<link rel="stylesheet" type="text/css" href="styles.css" />
-	<link rel="stylesheet" type="text/css" href="flexbox.css" />
+	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
+	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="css/flexbox.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
-
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	
 </head>
 
 <body>
@@ -31,9 +29,9 @@
 			<div class="row">
 				<h2 class="headline">Select the type of pet that needs sitting:</h2>
 				<div class="petField">
-					<a href="reserve-a-pet.html" class="col"><img src="images/cat.png" alt="Cat"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="images/corgi.png" alt="Dog"/></a>
-					<a href="reserve-a-pet.html" class="col"><img src="images/bunny.png" alt="Other"/></a>
+					<img class="col" src="images/cat.png" alt="Cat" />
+					<img class="col" src="images/corgi.png" alt="Dog" />
+					<img class="col" src="images/bunny.png" alt="Other" />
 				</div>
 			</div>
 
@@ -51,6 +49,15 @@
 	var year = today.getFullYear();
 	var copyright = document.getElementById('copyright');
 	copyright.innerHTML = '&copy; ' + year + ' Pet Spa &amp; Care';
+	</script>
+	<script language="javascript" type="text/javascript">
+		$(".col").click(function(){
+			//this will find the alt tage from the selected image
+	   		var petval = this.alt;
+	       //this will redirect us in same window to the form with the selected animal
+	       	document.location.href = "reserve-a-pet.html?petval=" + petval;
+	       	$('.col').load('reserve-a-pet.html #' + petval);
+	    });
 	</script>
 
 </body>
