--- a/reserve-a-pet.html
+++ b/reserve-a-pet.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="css/flexbox.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	
+	<script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
 </head>
 
 <body>
@@ -161,6 +161,8 @@
 		    		<fieldset class="bottomField">
 		    			<legend class="input">Available Dates</legend>
 		    			<p>Select the date you wish to have booked with us</p>
+						<input class="datepicker" type="text"/>
+						<input class="datepicker" type="text"/>
 		    		</fieldset>
 
 		    		<button type="Submit">Sign Up</button>
@@ -199,5 +201,11 @@
 		$("#petType").val(img_id);
 	</script>
 	<script src="js/val.js"></script>
+	<script>
+		$(".datepicker").click(function() {
+            $( this ).datepicker();
+            $( this ).datepicker("show");
+         });
+	</script>
 </body>
 </html>
