Updated html pages

--- a/reserve-a-pet.html
+++ b/reserve-a-pet.html
@@ -6,10 +6,12 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
+	<link rel="stylesheet" type="text/css" href="js/jquery-ui-1.8.18.custom.min.js" />
+	<link rel="stylesheet" type="text/css" href="css/datepicker.css"/>
 	<link rel="stylesheet" type="text/css" href="css/flexbox.css" />
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src = "https://code.jquery.com/ui/1.10.4/jquery-ui.js"></script>
+	<script src="js/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
 </head>
 
 <body>
@@ -20,7 +22,7 @@
 				<div class="nav-bar">
 					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"/></a></div>
 					<ul class="main-nav">
-						<li><a href="#">About Us</a></li>
+						<li><a href="about-us.html">About Us</a></li>
 						<li><a href="reserve-a-pet.html">Reserve A Pet</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
@@ -161,8 +163,8 @@
 		    		<fieldset class="bottomField">
 		    			<legend class="input">Available Dates</legend>
 		    			<p>Select the date you wish to have booked with us</p>
-						<input class="datepicker" type="text"/>
-						<input class="datepicker" type="text"/>
+						<input class="datepicker ui-icon ui-icon-triangle-2-e-w" type="text"/>
+						<input class="datepicker ui-icon ui-icon-triangle-2-e-w" type="text"/>
 		    		</fieldset>
 
 		    		<button type="Submit">Sign Up</button>
