--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<div class="nav-bar">
 					<div class="logo"><a href="index.html"><img src="images/logo.png" alt="logo"/></a></div>
 					<ul class="main-nav">
-						<li><a href="#">About Us</a></li>
+						<li><a href="about-us.html">About Us</a></li>
 						<li><a href="reserve-a-pet.html">Reserve A Pet</a></li>
 						<li><a href="contact.html">Contact</a></li>
 					</ul>
